<resources>
    <string name="app_name">WishList</string>
    <!--Login Strings-->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="name_prompt">Name</string>
    <string name="list_fragment">List Fragment</string>
    <string name="two">Deals Fragment</string>
    <string name="item_name">Item Name</string>
    <string name="quant">Quantity</string>
    <string name="pls_wait_txt">Items loading. Please wait..</string>
    <!---->
</resources>
